made the trending section , facing numbering issue , no responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="assets/images/logo.svg">
             </div>
             <div>
-                <button class="btn">English</button>
+                <button class="btn tr-btn">English</button>
                 <button class="btn nav-red-btn">Sign In</button>
             </div>
         </nav>
@@ -28,13 +28,42 @@
             <div>Unlimited movies,TV shows and more</div>
             <div>Starts at ₹149. Cancel at any time.</div>
             <div>Ready to watch? Enter your email to create or restart your membership.</div>
-            <div>
-                <input type="text" placeholder="Email address">
+            <div class="ip-sec">
+                <input class="email" type="text" placeholder="Email address">
                 <button class="btn main-red-btn">Get Started ></button>
             </div>
         </div>
     </div>
-    
+    <div class="m-div">
+        <h4 class="t-txt">Trending now</h4>
+    </div>
+    <div class="trending">
+        <div class="trnd-card">
+            <img src="assets/images/chava poster.webp" alt="">
+            <h1>1</h1>
+        </div>
+        <div class="trnd-card">
+            <img src="https://occ-0-2164-64.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABf4wStrKekb1hEKRFD141eOa8rGZTWJK1QxVF2zxvJDivIDqQMNDUmh_d33HVtAxToXkZlAeLEzdhxPXCskBuNsi4X_wSv2Brzk.webp?r=7de"
+                alt="">
+            <h1>2</h1>
+        </div>
+        <div class="trnd-card">
+            <img src="https://occ-0-2164-64.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABevU_rod-DWQFVDKVJIZa2-B1BHMVv0YOFyu9puZxb2zdWcFd8hyhIG1NnR9eU7UZffMFgfm1dmtmdb7Z81lqIYZY3eSFu3RPseVoODvi9H2vIDD-JEJLYo2RWZ_WkfjXSJY.webp?r=0d8"
+                alt="">
+            <h1>3</h1>
+        </div>
+        <div class="trnd-card">
+            <img src="https://occ-0-2164-64.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYVcRfFB91jy3f8-_Alb6H4RUzqXFRA7ejjOfCOXF20XLRVeCyT3ZFEimKbZAimt2ayVUWXSnp6ApNxpoK0mA3XzJD__irrDkdMD6lDrOFPSvQqP8s0xn2dNBaU9JxIu4lUd.webp?r=63b"
+                alt="">
+            <h1>4</h1>
+        </div>
+        <div class="trnd-card">
+            <img src="https://occ-0-2164-64.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABcBQAzZgCcAJyLKGf0x3EjJHKr1h1oCRUQDfVspaHXampP-RjiOkIRlWBz7ViFOvUI1EdPSRcxoOPmB7paPLi52W4OmQZJ4NDMQ.webp?r=a92"
+                alt="">
+            <h1>5</h1>
+        </div>
+    </div>
+
 
 
 
