--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             <h1>5</h1>
         </div>
     </div>
+    <div class="m-div">
+        <h4 class="t-txt">More reasons to join</h4>
+    </div>
+    <div class="icon-cards">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
 
 
