made the reason to join and faq section , no yt and no responsiveness yet

--- a/index.html
+++ b/index.html
@@ -66,13 +66,61 @@
     <div class="m-div">
         <h4 class="t-txt">More reasons to join</h4>
     </div>
-    <div class="icon-cards">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="icon-container">
+        <div class="icon-cards">
+            <h2>Enjoy on your TV</h2>
+            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            <img src="assets/images/smart-tv.png" alt="" class="icon">
+        </div>
+        <div class="icon-cards">
+            <h2>Download your shows to watch offline</h2>
+            <p>Save your favourites easily and always have something to watch.</p>
+            <img src="assets/images/down-arrow.png" alt="" class="icon">
+        </div>
+        <div class="icon-cards">
+            <h2>Watch everywhere</h2>
+            <p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p>
+            <img src="assets/images/pen.png" alt="" class="icon">
+        </div>
+        <div class="icon-cards">
+            <h2>Create profiles for kids</h2>
+            <p>Send kids on adventures with their favourite characters in a space made just for them — free with your
+                membership</p>
+            <img src="assets/images/chat.png" alt="" class="icon">
+        </div>
+    </div>
+    <div class="m-div">
+        <h4 class="t-txt">Frequently Asked Questions</h4>
+    </div>
+    <div class="faq">
+        <h2>What is Netflix ?</h2>
+        <img src="assets/images/plus.png" alt="">
+    </div>
+    <div class="faq">
+        <h2>How much does Netflix cost ?</h2>
+        <img src="assets/images/plus.png" alt="">
+    </div>
+    <div class="faq">
+        <h2>Where can I watch ?</h2>
+        <img src="assets/images/plus.png" alt="">
+    </div>
+    <div class="faq">
+        <h2>How do I cancel ?</h2>
+        <img src="assets/images/plus.png" alt="">
+    </div>
+    <div class="faq">
+        <h2>What can I watch on Netflix ?</h2>
+        <img src="assets/images/plus.png" alt="">
+    </div>
+    <div class="faq">
+        <h2>Is Netflix good for kids ?</h2>
+        <img src="assets/images/plus.png" alt="">
     </div>
 
+    <div class="">Ready to watch? Enter your email to create or restart your membership.</div>
+    <div class="ip-sec">
+        <input class="email" type="text" placeholder="Email address">
+        <button class="btn main-red-btn">Get Started ></button>
 
 
 
