--- a/index.html
+++ b/index.html
@@ -117,13 +117,40 @@
         <img src="assets/images/plus.png" alt="">
     </div>
 
-    <div class="">Ready to watch? Enter your email to create or restart your membership.</div>
-    <div class="ip-sec">
-        <input class="email" type="text" placeholder="Email address">
-        <button class="btn main-red-btn">Get Started ></button>
+    <div class="above-footer-button">Ready to watch? Enter your email to create or restart your membership.
+        <div class="ip-sec">
+            <input class="email" type="text" placeholder="Email address">
+            <button class="btn main-red-btn">Get Started ></button>
+        </div>
+    </div>
+    <footer class="footer">
+        <h5>Questions? Call <u>000-800-919-1743</u></h5>
+        <div class="ft-grid">
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
+            <p>Cookie Preferences</p>
 
 
+        </div>
+        <div class="ft-btn">
+            <button class="btn tr-btn">English</button>
+        </div>
+        <p>Netflix India</p>
+        <p>This page is protected by Google reCAPTCHA to ensure you're not a bot. <u>Learn more</u></p>
 
+    </footer>
 </body>
 
 </html>
