--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
+<head>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
+    <link rel="icon"  type="image/png" sizes="32x32" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -141,16 +141,12 @@
             <p>Cookie Preferences</p>
             <p>Cookie Preferences</p>
             <p>Cookie Preferences</p>
-
-
         </div>
         <div class="ft-btn">
             <button class="btn tr-btn">English</button>
         </div>
         <p>Netflix India</p>
         <p>This page is protected by Google reCAPTCHA to ensure you're not a bot. <u>Learn more</u></p>
-
     </footer>
 </body>
-
 </html>
