website is complete for desktop view

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h5>Questions? Call <u>000-800-919-1743</u></h5>
         <div class="ft-grid">
             <p>Cookie Preferences</p>
-            <p>Cookie Preferences</p>
+            <p>Faq</p>
             <p>Cookie Preferences</p>
             <p>Cookie Preferences</p>
             <p>Cookie Preferences</p>
